--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://role_f17589f9a:qgonxnww4cbPvJs2kUK6N3uzStKYLwBa@db-f17589f9a.db001.hosteddb.reai.io:5432/f17589f9a"
+DATABASE_URL="postgresql://postgres:46257688884@Mateus@db.vhwoueuabwzqesuyfsyy.supabase.co:5432/postgres"
 NEXTAUTH_URL="https://98f6d3324.preview.abacusai.app/"
 NEXTAUTH_SECRET="5k083gBngygT3xpR1NiKJlN8MfjbqWID"
